[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
dashmap = "6.1.0"
futures = "0.3.31"
hex = "0.4.3"
memchr = "2.7.6"
nom = "8.0.0"
ordered-float = "5.1.0"
skiplist = "0.6.0"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async_tokio"] }

[[bench]]
name = "list_operations"
harness = false

[lib]
bench = false

[[bin]]
name = "codecrafters-redis"
path = "src/main.rs"
bench = false
